# jenkins-pipeline-demo

./: CMakeLists.txt  Jenkinsfile  README.md  demo_step.sh  echo.jenkinsfile  main.cpp  run_jenkins.py  run_job.groovy
